[tool.poetry]
name = "mys-goods-tool"
version = "2.0.0-dev"
description = "米游社商品兑换工具"
authors = ["Ljzd-PRO <ljzd@office.ljzd-pro.ml>"]
readme = "README.md"
packages = [{ include = "mys_goods_tool" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tenacity = "~=8.2.2"
requests = "~=2.28.2"
ping3 = "~=4.0.4"
ntplib = "~=0.4.0"
pyperclip = "~=1.8.2"
pydantic = "~=1.10.6"
loguru = ">=0.6.0,<=0.7.0"
httpx = ">=0.23.0,<=0.25.0"
rich = "~=13.3.3"
textual = "~=0.19.1"
charset_normalizer = ">=2.0.0,<4.0.0"

[tool.poetry.group.pyinstaller.dependencies]
pyinstaller = "~=5.9.0"

[tool.poetry.group.test.dependencies]
pytest = "~=7.3.0"
pyflake8 = "~=6.0.0"
pytest-html = "~=3.2.0"
pytest-asyncio = "~=0.21.0"

[tool.poetry.group.pyinstaller]
optional = true

[tool.poetry.group.test]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
